# dmed-protocol

./: .gitignore  CONTRIBUTING.md  DMED-protocol-spec-v0.1.md  DMED-protocol-spec-v0.2.md  DMED_PROMPT.md  LICENSE  README.md  index.html
android/dmed-scanner/: README.md  gradlew  local.properties
android/dmed-scanner-working/: .gitignore  settings.gradle.kts
docs/: DMED-prior-art-research.md  api-reference-c.md  api-reference-cpp.md  api-reference-python.md  architecture.md  cookbook.md  demo-checklist.md  demo.html  development-plan.md  getting-started.md
docs/deployment/: raspberry-pi.md
docs/tutorials/: build-a-client.md  share-on-bluetooth.md  share-on-internet.md  share-on-local-wifi.md
examples/: dmed_client.py  dmed_full_lifecycle.py  dmed_server.py  thought_client.c  thought_stream.c
examples/dmed-client-scanner/: README.md  interactive-client.js  package.json  scanner.js
examples/smart-coffee-machine/: README.md  dmed-manifest.json  package-lock.json  package.json  server.js  server.test.js
gateway/: README.md  config.json.example  package-lock.json  package.json  tsconfig.json  vitest.config.ts
lib/python/: README.md  pyproject.toml
lib/python/dmed/: __init__.py
lib/python/tests/: test_beacon.py  test_card.py  test_client.py
spec/: DMED-spec-v0.1.md  appendix-a-json-schema.md  appendix-b-ble-transport.md  appendix-c-mdns-transport.md  appendix-d-internet-transport.md  appendix-e-service-types.md  appendix-f-examples.md  appendix-g-implementation-guide.md  appendix-h-discovery-framework.md  appendix-i-mcp-gateway.md
things/: README.md
(+152 files in other folders)
