[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dmed-protocol"
version = "0.2.0"
description = "DMED — Dynamic MCP Endpoint Discovery Protocol library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
server = ["zeroconf>=0.80", "flask>=2.0"]
client = ["zeroconf>=0.80", "requests>=2.28"]
all = ["zeroconf>=0.80", "flask>=2.0", "requests>=2.28"]
